--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,16 @@ beautifulsoup4==4.9.1
 certifi==2020.4.5.2
 chardet==3.0.4
 defusedxml==0.6.0
+dj-database-url==0.5.0
 Django==3.0.7
 django-allauth==0.42.0
 django-bootstrap-pagination==1.7.1
 django-bootstrap4==2.0.1
+gunicorn==20.1.0
 idna==2.9
 importlib-metadata==1.6.1
 oauthlib==3.1.0
+psycopg2-binary==2.8.6
 python3-openid==3.1.0
 pytz==2020.1
 requests==2.23.0
@@ -17,4 +20,5 @@ requests-oauthlib==1.3.0
 soupsieve==2.0.1
 sqlparse==0.3.1
 urllib3==1.25.9
+whitenoise==5.2.0
 zipp==3.1.0
