--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Django==3.0.7
 django-allauth==0.42.0
 django-bootstrap-pagination==1.7.1
 django-bootstrap4==2.0.1
+django-on-heroku==1.1.2
 gunicorn==20.1.0
 idna==2.9
 importlib-metadata==1.6.1
